spacing in top command bar to avoid wrapping in smaller width

--- a/AzureFunctions.AngularClient/src/app/try-top-command-bar/try-top-command-bar.component.scss
+++ b/AzureFunctions.AngularClient/src/app/try-top-command-bar/try-top-command-bar.component.scss
@@ -24,7 +24,7 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
-    padding-right: 4%;
+    padding-right: 10px;
 }
 
 a {
@@ -113,6 +113,7 @@ a {
 
 .command-button {
     height: 100%;
+    margin-left: 5px;
 }
 
 .time-remaining {
